# fit-track

./: README.md  docker-compose.yml  mise.toml  openapi.json
.cursor/rules/: application-idea.mdc
client/: .dockerignore  Dockerfile  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
client/src/lib/: api.ts  config.ts  types.ts
client/src/lib/stores/: auth.ts
client/src/routes/: +layout.svelte  +page.svelte
client/src/routes/login/: +page.svelte
client/src/routes/register/: +page.svelte
client/src/routes/trainings/[id]/edit/: +page.svelte
client/src/routes/trainings/new/: +page.svelte
server/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 0af5a50cb1a7_init.py  58e5a5e33f57_noramlization.py  6583b271d3e7_init.py  d3a6fa6b9077_add_aliases.py  d941d311330c_init.py  e232f17611fc_init.py
server/app/: __init__.py  main.py
server/app/api/: deps.py
server/app/api/v1/: api.py
server/app/api/v1/endpoints/: exercises.py  trainings.py  users.py
server/app/core/: config.py  security.py
server/app/db/: seed_exercises.py  session.py
server/app/models/: __init__.py  base.py  models.py
server/app/schemas/: base.py  exercise.py  token.py  training.py  user.py
server/app/services/: training_service.py  user.py
server/tests/: conftest.py  test_api.py  test_models.py
server/tests/exercises/: test_exercises_detail.py  test_exercises_list.py
server/tests/trainings/: conftest.py  test_create.py  test_delete.py  test_read.py  test_update.py
