[project]
name = "fitness-tracker"
version = "0.1.0"
description = "Fitness training tracking application"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.1",
    "sqlalchemy>=2.0.27",
    "alembic>=1.13.1",
    "pydantic>=2.6.1",
    "pydantic-settings>=2.1.0",
    "aiosqlite>=0.19.0",
]